<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_teamups"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_teamups" />

    <item
        android:id="@+id/navigation_notices"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_notices" />

    <item
        android:id="@+id/navigation_mdt"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_mdt" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/title_more" />
</menu>
